# precision-scorer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  main.py  requirements.txt
docs/: ARCHITECTURE.md  CALIBRATION.md  CONFIGURATION.md  DETECTION.md  README.md  SCORING.md
src/: __init__.py  camera.rs  capture.py  config.py  detection.py  gui.py  main.rs  preprocessing.py  processor.rs  scoring.py
src/yolo-test/: yolo_test.rs
targets/: brazil_rs_50m_air.json  issf_10m_air_rifle.json  issf_50m_rifle.json
yolo/: yolo11l.onnx  yolo11m.onnx  yolo11s.onnx  yolo11x.onnx  yolo12l.onnx  yolo12m.onnx  yolo12n.onnx  yolo12s.onnx  yolo12x.onnx  yolov8n.onnx
